# esp-matter-window

./: .gitignore  CLAUDE.md  CMakeLists.txt  HARDWARE.md  LICENSE  README.md  TODO.md  env.sh  idf.sh  partitions.csv  sdkconfig.defaults
docs/: power-tests.md
docs/datasheets/: README.md
learning-doc/: matter-learning.md  project-structure-learning.md
main/: CMakeLists.txt  diag_log.cpp  idf_component.yml  led_ctrl.cpp  main_app.cpp  matter_app.cpp  motor_ctrl.cpp  window_ctrl.cpp
main/include/: diag_log.h  led_ctrl.h  matter_app.h  motor_ctrl.h  window_ctrl.h
